# ray-tracing

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: App.hpp  Canvas.hpp  Image.hpp  Random.hpp  Shader.hpp  Texture.hpp  pch.hpp
include/meta/: glfw.hpp  glm.hpp
include/model/: Material.hpp  Plane.hpp  Ray.hpp  Scene.hpp  Shape.hpp  Sphere.hpp
src/: App.cpp  Canvas.cpp  Image.cpp  Main.cpp  Random.cpp  Shader.cpp  Texture.cpp
src/model/: Plane.cpp  Scene.cpp  Sphere.cpp
src/shader/: shader.vert
src/shaders/: shader.frag
